Add exec main